--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/apurvjain95/supabase-compliance-checker-backend#readme",
   "dependencies": {
     "@supabase/supabase-js": "^2.48.1",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
