--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "express-validator": "^7.2.1",
-    "winston": "^3.17.0"
+    "express-validator": "^7.2.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
